Removing old dependencies, updating tasks per Katy, adding localStorage

--- a/src/TaskTickets.css
+++ b/src/TaskTickets.css
@@ -54,8 +54,7 @@
 
 .SelectedPerson > .Tasks {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-evenly;
 }
 
